Braille UTF-8 characters are not readable
Categories
(Core :: Layout: Text and Fonts, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox96 | --- | fixed |
People
(Reporter: sau412, Assigned: jfkthame)
References
()
Details
Attachments
(2 files)
User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10.15; rv:94.0) Gecko/20100101 Firefox/94.0
Steps to reproduce:
I opened my page with braille UTF-8 characters and found that I cannot read them. Characters are shown as black and gray dots instead of black dots only. See screenshot.
Actual results:
After browser update braille UTF-8 characters are not readable.
Expected results:
I expected to see readable characters.
UTF-8 Braille characters fox example: ⠠⠃⠗⠁⠊⠇⠇⠑⠀⠉⠓⠁⠗⠁⠉⠞⠑⠗⠎
Site with all symbols: https://utf8-icons.com/subset/braille-patterns
Updated•4 years ago
|
| Assignee | ||
Comment 2•4 years ago
|
||
It looks like this is a question of which face of Apple Braille is used. I'm seeing the characters in comment 1 rendered with "Apple Braille Outline 6 Dot", which displays the dots as solid black and the "empty" positions of the 6-dot grid as hollow circles -- which at small sizes will basically look like gray dots.
The "Apple Braille Regular" face, which displays just the black dots -- the "empty" positions are left truly empty -- would probably be preferable. But I guess all the faces (there's also a "Pinpoint" face, and 8-dot versions of "Outline" and "Pinpoint") share the same style properties (weight, stretch, style) from a CSS point of view, and so it's unclear which one we'll get by default.
We probably need some added heuristic or even special-case code to favor the Regular face here.
| Assignee | ||
Comment 3•4 years ago
|
||
Updated•4 years ago
|
Updated•4 years ago
|
Comment 5•4 years ago
|
||
| bugherder | ||
Description
•