Bug 1743560 - Prefer a face named 'Regular' over other faces in a macOS font family if they cannot be distinguished by style attributes. r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D132486